--- a/app/components/TriviaCard/styles.css
+++ b/app/components/TriviaCard/styles.css
@@ -5,6 +5,15 @@
     margin: auto;
     text-align: center;
   }
+
+  .fullscreen {
+    position: fixed;
+    top: 0;
+    left:0;
+    z-index: 1000;
+    height: 100%;
+    width: 100%;
+  }
   
   .header {
     color: white;
